add delete token button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Token</h1>
+    <h1>Token <button onclick="deleteToken()">Refresh Token</button></h1>
     <p id="token">Token</p>
 
     <br><br>
